--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CV - DEVESH KASHYAP</title>
+    <title>CV - DEV KASHYAP</title>
 </head>
 
 <frameset cols="22%,78%" frameborder="0" border="0">
@@ -10,3 +10,4 @@
 </frameset>
 
 </html>
+
