--- a/details.html
+++ b/details.html
@@ -65,7 +65,7 @@
         </tr>
         <tr>
             <td>MASTERS</td>
-            <td>National Institute of Technology Tiruchirappalli</td>
+            <td>National of Technology Tiruchirappalli</td>
             <td>2024 – 2027</td>
         </tr>
         <tr>
@@ -89,4 +89,5 @@
         <li>Gaming</li>
     </ul>
 </body>
+
 </html>
